-Added code to the extension so when it blocks a website it sends the url to the backend. - Added the backend route to handle the request form the extension. - Did some adjustments to extension.

--- a/Extension/index.html
+++ b/Extension/index.html
@@ -9,15 +9,13 @@
 </head>
 
 <body>
-    <h1>Safe web navigation</h1>
-    <hr>
-    <div class="option">
-        <p>Real-time blocking</p>
-        <label class="switch">
-            <input type="checkbox" checked id="real_time_toggle">
-            <span class="slider round"></span>
-        </label>
+    <div class="title">
+        <img src="assets/images/ad.png" alt="Logo">
+        <h1>Safe web navigation</h1>
     </div>
+
+    <hr>
+
 
     <div class="add_bookmark_container">
         <button id="add_bookmark">Bookmark this website</button>
